--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ server.port=8081
 
 
 #AWS S3
-cloud.aws.credentials.accessKey=AKIATSTTLU24T5RAN3XM
-cloud.aws.credentials.secretKey=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
+cloud.aws.credentials.accessKey=#####
+cloud.aws.credentials.secretKey=######
 cloud.aws.region=ap-south-1
 
 
 
 
-app.awsServices.bucketName=balla069
+app.awsServices.bucketName=###
 
 #Scheduler
 cron.expression=*/5 * * * * *
